Bug 78796 - vconsole-setup doesn't copy complete virtual console config
Summary: vconsole-setup doesn't copy complete virtual console config
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium minor
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
: 64159 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-16 19:16 UTC by Carl Schaefer
Modified: 2014-06-25 09:48 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
patch suggestion (1.55 KB, text/plain)
2014-05-16 19:16 UTC, Carl Schaefer
Details

Description Carl Schaefer 2014-05-16 19:16:23 UTC
Created attachment 99168 [details]
patch suggestion

If I'm reading it right, vconsole-setup uses setfont(8) to initialize tty1 and then calls font_copy_to_all_vcs() to copy the font config of tty1 to tty2/tty3/etc.

However, setfont can do more than just set the font, it can also install character maps with PIO_SCRNMAP, PIO_UNISCRNMAP and PIO_UNIMAP.  When vconsole-setup initializes tty2/tty3/etc. it should copy these tables along with the font, or more conservatively, run setfont on each virtual terminal.  Or maybe setfont could operate on a list of ttys.
Comment 1 Lennart Poettering 2014-06-23 16:25:41 UTC
Patch looks good to me, applied. I didn't test whether it really works though, as I don't really use any fonts anymore...
Comment 2 Lennart Poettering 2014-06-25 09:48:55 UTC
*** Bug 64159 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.