vconsole: also copy character maps (not just fonts) from vt1 to vt2, vt3, ...

https://bugs.freedesktop.org/show_bug.cgi?id=78796